--- a/gestion_eventos/templates/base.html
+++ b/gestion_eventos/templates/base.html
@@ -19,17 +19,23 @@
     <header class="bg-dark text-white text-center py-3 mb-4">
         <h1>Gestión de Eventos</h1>
         <nav class="d-flex justify-content-center">
-            <a class="nav-link d-inline-block px-3 mx-2" href="{% url 'event_list' %}">Eventos</a>
-            <a class="nav-link d-inline-block px-3 mx-2" href="{% url 'participant_list' %}">Participantes</a>
+            <a id="event-link" class="nav-link d-inline-block px-3 mx-2" href="{% url 'event_list' %}">Eventos</a>
+            <a id="participant-link" class="nav-link d-inline-block px-3 mx-2" href="{% url 'participant_list' %}">Participantes</a>
         </nav>
     </header>
+
+    <section id="welcome-section" class="welcome-section text-center py-5" style="background-color: rgba(255, 255, 255, 0.9); border-radius: 15px; padding: 50px 20px; max-width: 800px; margin: 50px auto; text-align: center;">
+        <div class="container">
+            <h2 class="welcome-title" style="font-size: 3rem; color: #0B0C0E; margin-bottom: 20px; font-weight: 700; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);">Bienvenido a la Gestión de Eventos y Participantes</h2>
+        </div>
+    </section>
+
     <div class="container">
         <div id="alert-messages">
             {% if messages %}
             <div class="alert-messages">
                 {% for message in messages %}
-                <div class="alert {% if message.tags %}alert-{{ message.tags }}{% else %}alert-info{% endif %} alert-dismissible fade show"
-                    role="alert">
+                <div class="alert {% if message.tags %}alert-{{ message.tags }}{% else %}alert-info{% endif %} alert-dismissible fade show" role="alert">
                     {{ message }}
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
@@ -46,16 +52,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
     <script>
-        // Script para hacer que los mensajes de alerta desaparezcan después de 5 segundos
         $(document).ready(function () {
             setTimeout(function () {
                 $(".alert").fadeOut("slow", function () {
                     $(this).remove();
                 });
-            }, 4000); // 4000ms = 4 segundos
+            }, 4000);
+
+            const currentPath = window.location.pathname;
+            if (currentPath.includes('event_list') || currentPath.includes('participant_list')) {
+                $('#welcome-section').hide();
+            }
+
+            $('#event-link, #participant-link').on('click', function () {
+                $('#welcome-section').hide();
+            });
         });
-    </script>
-    <script>
+
         function validateForm() {
             let valid = true;
             document.querySelectorAll('input').forEach(input => {
@@ -69,7 +82,6 @@
             return valid;
         }
     </script>
-
 </body>
 
 </html>
